--- a/argentbank/src/pages/Dashboard/Dashboard.scss
+++ b/argentbank/src/pages/Dashboard/Dashboard.scss
@@ -1,9 +1,1 @@
-.headerDashboard{
-    padding: 2em;
-    color: white;
-}
-
-.bg-dark-dashboard{
-    background-color: #12002b;
-    height: 80vh;
-}
+.headerDashboard{padding: 2em;color: white;}.bg-dark-dashboard{background-color: #12002b;height: 80vh;}
