--- a/argentbank/src/pages/Sign-in/Sign-in.scss
+++ b/argentbank/src/pages/Sign-in/Sign-in.scss
@@ -1,10 +1,1 @@
-.bg-dark-signIn{
-    
-    min-height: 80vh;
-    display: flex;
-    justify-content:center ;
-    align-items: center;
-    background-color: #12002b;
-    
-}
-
+.bg-dark-signIn{min-height: 80vh;display: flex;justify-content:center ;align-items: center;background-color: #12002b;}
